--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Vòng quay, ITC, phần thưởng, trò chơi, giải trí" />
     <meta name="author" content="Cao đẳng Công nghệ thông tin TP. Hồ Chí Minh" />
     <title>Vòng quay ITC</title>
-    <!-- <link rel="stylesheet" href="./style.css" /> -->
+
 </head>
 <style>
     :root {
@@ -17,9 +17,9 @@
     }
 
     body {
-background-image: url('./back2.png');
-background-repeat: no-repeat;
-background-size: cover;
+        background-image: url('https://triethuynh2202.github.io/VongQuay1/images/back2.png');
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 
     * {
@@ -182,12 +182,6 @@ background-size: cover;
         opacity: 0.8;
     }
 
-    @media (max-width: 768px) {
-        body {
-            display: none;
-        }
-    }
-
     .tt {
         position: absolute;
         bottom: 4%;
@@ -229,6 +223,16 @@ background-size: cover;
         height: 90px;
         width: 90px;
     }
+
+    @media (max-width: 600px) {
+        body {
+            background-image: none;
+        }
+
+        .msg {
+            width: 100%;
+        }
+    }
 </style>
 
 <body>
@@ -236,7 +240,7 @@ background-size: cover;
         <div class="logo"></div>
         <h2 style="text-align: center; margin: 15px 0px; color: navy;"></h2>
     </div>
-   
+
     <main>
         <section class="main">
             <span>
@@ -246,7 +250,93 @@ background-size: cover;
         </section>
         <h2 class="msg"></h2>
     </main>
-    <script src="main.js"></script>
+    <script>(() => {
+            const $ = document.querySelector.bind(document);
+
+            let timeRotate = 7000;
+            let currentRotate = 0;
+            let isRotating = false;
+            const wheel = $('.wheel');
+            const btnWheel = $('.btn--wheel');
+            const showMsg = $('.msg');
+
+            // Thêm âm thanh quay
+            const spinSound = new Audio('amthanhquay.mp3'); // Đảm bảo đường dẫn chính xác
+
+            //=====< Danh sách phần thưởng >=====
+            const listGift = [
+                { text: 'Gấu bông ITC', chance: 0 },
+                { text: 'Quạt ITC', chance: 5 },
+                { text: 'Quay lại lần nữa', chance: 3 },
+                { text: 'Bình nước ITC', chance: 5 },
+                { text: 'Balo ITC', chance: 1 },
+                { text: 'Chúc bạn may mắn lần sau', chance: 45 },
+                { text: 'Bút ITC', chance: 11 },
+                { text: 'Quay lại lần nữa', chance: 34 }
+            ];
+
+            const totalChance = 100;
+            let cumulativeChance = 0;
+            const cumulativeGifts = listGift.map(gift => {
+                cumulativeChance += gift.chance;
+                return {
+                    ...gift,
+                    cumulativeChance: cumulativeChance
+                };
+            });
+
+            const size = listGift.length;
+            const rotate = 360 / size;
+            const skewY = 90 - rotate;
+
+            cumulativeGifts.forEach((item, index) => {
+                const elm = document.createElement('li');
+                elm.style.transform = `rotate(${rotate * index}deg) skewY(-${skewY}deg)`;
+
+                elm.innerHTML = `<p style="transform: skewY(${skewY}deg) rotate(${rotate / 2}deg);" class="text ${index % 2 === 0 ? 'text-1' : 'text-2'}">
+    <b>${item.text}</b>
+    </p>`;
+
+                wheel.appendChild(elm);
+            });
+
+            const start = () => {
+                showMsg.innerHTML = '';
+                isRotating = true;
+                spinSound.play(); // Phát âm thanh khi bắt đầu quay
+                const gift = getGift();
+                currentRotate += 360 * 10; // Tăng vòng quay
+                rotateWheel(currentRotate, gift.index);
+                showGift(gift);
+            };
+
+            const rotateWheel = (currentRotate, index) => {
+                $('.wheel').style.transform = `rotate(${currentRotate - index * rotate - rotate / 2}deg)`;
+            };
+
+            const getGift = () => {
+                const random = Math.random() * totalChance; // Lấy giá trị ngẫu nhiên từ 0 đến 100
+                for (let i = 0; i < cumulativeGifts.length; i++) {
+                    if (random < cumulativeGifts[i].cumulativeChance) {
+                        return { ...cumulativeGifts[i], index: i };
+                    }
+                }
+
+                return { ...cumulativeGifts[0], index: 0 };
+            };
+
+            const showGift = gift => {
+                let timer = setTimeout(() => {
+                    isRotating = false;
+                    showMsg.innerHTML = ` "${gift.text}"`;
+                    clearTimeout(timer);
+                }, timeRotate);
+            };
+
+            btnWheel.addEventListener('click', () => {
+                !isRotating && start();
+            });
+        })();</script>
 </body>
 
 </html>
